:bug: Makes smilies less blurry

--- a/public/css/index.scss
+++ b/public/css/index.scss
@@ -108,6 +108,7 @@ h2 {
     img {
       width: 100%;
       height: 100%;
+      image-rendering: crisp-edges;
     }
   }
 }
